--- a/artist4all_angular/src/app/components/public/contact/contact.component.html
+++ b/artist4all_angular/src/app/components/public/contact/contact.component.html
@@ -1,4 +1,3 @@
-<app-user-navbar></app-user-navbar>
 <div class="relative bg-white">
   <div class="lg:absolute lg:inset-0">
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
@@ -16,26 +15,79 @@
         <p class="mt-4 text-lg md:mb-20 text-center md:text-left text-gray-500 sm:mt-3">
           ¡Nos encantaría hablar contigo! Envíanos un mensaje usando este formulario o envíanos un email.
         </p>
-        <form action="#" method="POST" class="mt-9 grid grid-cols-1 gap-y-8 sm:grid-cols-2 sm:gap-x-8">
+        <form [formGroup]="contactForm" (ngSubmit)="sendContactForm()"
+          class="mt-9 grid grid-cols-1 gap-y-8 sm:grid-cols-2 sm:gap-x-8">
           <div>
             <label for="first_name" class="block text-sm font-medium text-gray-700">Nombre</label>
             <div class="mt-1">
-              <input type="text" name="first_name" id="first_name" autocomplete="given-name"
+              <input type="text" formControlName="name" name="first_name" id="first_name" autocomplete="given-name"
                 class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 border-gray-500 rounded-md">
+              <div *ngIf="name.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+                <div *ngIf="name.errors.required"
+                  class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+                  <i class="fas fa-times-circle"></i>
+                  Se requiere un nombre.
+                </div>
+              </div>
+              <div *ngIf="name.errors && name.errors.pattern"
+                class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+                <i class="fas fa-times-circle"></i>
+                Nombre no válido
+                <p class="inline-block ml-2 hover:text-red-500" (mouseenter)="showNameHint()"
+                  (mouseleave)="showNameHint()">Más informacion<i class="fas fa-exclamation-circle ml-1"></i></p>
+                <div *ngIf="showingNameHint" id="nameHint">
+                  Requisitos: <br>
+                  - Longitud mínima de 2 carácteres. <br>
+                  - Longitud máxima de 50 carácteres. <br>
+                  - No puede contener carácteres especiales salvo: (, . ' -).
+                </div>
+              </div>
             </div>
           </div>
           <div>
             <label for="last_name" class="block text-sm font-medium text-gray-700">Apellido</label>
             <div class="mt-1">
-              <input type="text" name="last_name" id="last_name" autocomplete="family-name"
+              <input type="text" formControlName="surname1" name="last_name" id="last_name" autocomplete="family-name"
                 class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 border-gray-300 rounded-md">
+              <div *ngIf="surname1.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+                <div *ngIf="surname1.errors.required"
+                  class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+                  <i class="fas fa-times-circle"></i>
+                  Se requiere el 1r apellido.
+                </div>
+              </div>
+              <div *ngIf="surname1.errors && surname1.errors.pattern"
+                class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+                <i class="fas fa-times-circle"></i>
+                El 1r Apellido no es válido.
+                <p class="inline-block ml-2 hover:text-red-500" (mouseenter)="showSurname1Hint()"
+                  (mouseleave)="showSurname1Hint()">Más informacion<i class="fas fa-exclamation-circle ml-1"></i></p>
+                <div *ngIf="showingSurname1Hint" id="surname1Hint">
+                  Requisitos: <br>
+                  - Longitud mínima de 2 carácteres. <br>
+                  - Longitud máxima de 50 carácteres. <br>
+                  - No puede contener carácteres especiales salvo: (, . ' -).
+                </div>
+              </div>
             </div>
           </div>
           <div class="sm:col-span-2">
             <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
             <div class="mt-1">
-              <input id="email" name="email" type="email" autocomplete="email"
+              <input id="email" formControlName="email" name="email" type="email" autocomplete="email"
                 class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 border-gray-300 rounded-md">
+                <div *ngIf="email.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+                  <div *ngIf="email.errors.required"
+                    class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+                    <i class="fas fa-times-circle"></i>
+                    Se requiere un correo electrónico.
+                  </div>
+                </div>
+                <div *ngIf="email.errors && email.errors.pattern"
+                  class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+                  <i class="fas fa-times-circle"></i>
+                  Correo electrónico no válido.
+                </div>
             </div>
           </div>
           <div class="sm:col-span-2">
@@ -44,27 +96,50 @@
               <span id="phone_description" class="text-sm text-gray-500">Opcional</span>
             </div>
             <div class="mt-1">
-              <input type="text" name="phone" id="phone" autocomplete="tel" aria-describedby="phone_description"
+              <input type="text" formControlName="phone" name="phone" id="phone" autocomplete="tel"
+                aria-describedby="phone_description"
                 class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 border-gray-300 rounded-md">
-            </div>
+                <div *ngIf="phone.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+                  <div *ngIf="phone.errors.required"
+                    class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+                    <i class="fas fa-times-circle"></i>
+                    Se requiere un numero de telefono.
+                  </div>
+                </div>
+                <div *ngIf="phone.errors && phone.errors.pattern"
+                  class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+                  <i class="fas fa-times-circle"></i>
+                  Número de teléfono no válido.
+                </div>
+             </div>
           </div>
           <div class="sm:col-span-2">
             <div class="flex justify-between">
               <label for="how_can_we_help" class="block text-sm font-medium text-gray-700">¿Cómo podemos
                 ayudarte?</label>
-              <span id="how_can_we_help_description" class="text-sm text-gray-500">Máximo 500 carácteres</span>
+              <span id="how_can_we_help_description" class="text-sm text-gray-500">Cantidad máxima de carácteres: {{ contador}}</span>
             </div>
             <div class="mt-1">
-              <textarea id="how_can_we_help" name="how_can_we_help" aria-describedby="how_can_we_help_description"
-                rows="4"
+              <textarea id="how_can_we_help" formControlName="bodyMessage" name="how_can_we_help" (keyup)="countCharacters($event)"
+                aria-describedby="how_can_we_help_description" rows="4"
                 class="block w-full shadow-sm sm:text-sm focus:ring-indigo-500 focus:border-indigo-500 border-gray-300 rounded-md"></textarea>
+                <div *ngIf="bodyMessage.errors && isValidFormSubmitted != null && !isValidFormSubmitted" [ngClass]="'error'">
+                  <div *ngIf="bodyMessage.errors.required"
+                    class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 -mb-5 text-sm">
+                    <i class="fas fa-times-circle"></i>
+                    Se requiere un mensaje.
+                  </div>
+                </div>
+                <div *ngIf="showingBodyHint" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-1 text-sm">
+                  <i class="fas fa-times-circle"></i>
+                  La cantidad máxima de carácteres es de 500.
+                </div>
             </div>
           </div>
           <div class="text-center md:text-right ml-10">
-            <button type="submit"
-              class="inline-flex md:mb-24 ml-96 justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-              Enviar
-            </button>
+            <input type="submit" [disabled]="showingBodyHint"
+              class="inline-flex md:mb-24 ml-96 justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+              value="Enviar"/>
           </div>
         </form>
       </div>
