--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -68,7 +68,7 @@
           <div class="w-full flex justify-end" style="margin-bottom: -35px">
                <!-- TODO: button styles when disable to distinguish when u can send form -->
             <input type="submit" style="top: -95px; right: 10px; max-width: 100px;" [disabled]="bodyPublication == '' || showingImgHint || showingBodyHint"
-              class="flex-1 justify-center h-full max-h-14 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-black focus:outline-none w-full relative"
+              class="disabled:opacity-50 flex-1 justify-center h-full max-h-14 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-black focus:outline-none w-full relative"
               value="Publicar"/>
           </div>
         </form>
