--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -6,7 +6,7 @@
   <div>
     <div class="max-w-3xl mx-auto sm:px-6 lg:max-w-full lg:px-8 lg:grid lg:grid-cols-12 lg:gap-8"
       style="padding-left: 0;">
-      <div class="hidden lg:block lg:col-span-3 xl:col-span-2 bg-gray-800">
+      <div class="hidden lg:block lg:col-span-3 xl:col-span-2 min-h-screen bg-gray-800">
         <nav aria-label="Sidebar" class="sticky top-4 divide-y divide-gray-300" style="padding:25px;">
           <div class="pb-8 space-y-1">
             <a routerLink="/home"
@@ -54,10 +54,9 @@
       <main class="lg:col-span-8 lg:pt-8 lg:pb-10 xl:col-span-7">
         <form #formPublication="ngForm" enctype="multipart/form-data" method="POST" class="flex flex-col"
           (ngSubmit)="createPublication(); formPublication.reset()">
-          <div *ngIf="!showingBodyHint" class="-mb-4"><span class="text-sm inline-block">Cantidad de carácteres
-              permitidos: {{ contador }}</span></div>
-          <div *ngIf="showingBodyHint" class="-mb-4"><span class="text-sm inline-block">Cantidad de carácteres
-              permitidos:</span><span class="inline-block text-sm text-red-600">&nbsp; {{ contador }}</span></div>
+          <div *ngIf="!showingBodyHint" class="-mb-4"><span class="text-sm inline-block mb-2">Carácteres disponibles: {{ contador }}</span></div>
+          <div *ngIf="showingBodyHint" class="-mb-4"><span class="text-sm inline-block mb-2">Carácteres disponibles:
+          </span><span class="inline-block text-sm text-red-600">&nbsp; {{ contador }}</span></div>
           <textarea #textAreaBody="ngModel" (keyup)="countCharacters($event)" [(ngModel)]="bodyPublication"
             id="bodyPublication" name="bodyPublication"
             class="mt-3 md:mt-0 w-full resize-y rounded-md shadow border-0 text-md flex-3 mb-2 sm:mb-0 mr-0 sm:mr-3 p-4"
@@ -71,7 +70,9 @@
               </path>
             </svg>
           </label>
-          <!-- TODO: button desselect images, fix display of images and error message according-->
+          <button type="button" (click)="removeSelectedImgs()" class="absolute" style="top:270px; left: 395px;">
+            <svg class="w-7 h-7 font-bold text-red-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+          </button>
           <input class="hidden" type="file" #imgPublication (change)="addImgPublication($event.target.files)"
             id="imgPublication" name="imgPublication[]" ng-model="files" multiple="multiple" />
           <!-- <button class="inline-block" type="button" (click)="removeSelectedImgs()">Eliminar las imágenes</button> -->
@@ -224,7 +225,7 @@
             <div class="bg-white rounded-lg shadow">
               <div class="p-6">
                 <h2 id="trending-heading" class="text-base font-medium text-gray-900">
-                  Top 3 publicaciones del mes
+                  Publicaciones destacadas
                 </h2>
                 <div class="mt-6 flow-root">
                   <ul class="-my-4 divide-y divide-gray-200">
@@ -240,7 +241,7 @@
                             alt="imgAvatar">
                         </div>
                         <div class="min-w-0 flex-1 ml-2 mr-2">
-                          <h3 class="semibold">{{ publication.user.username }}</h3>
+                          <h3 class="mb-2 semibold">{{ publication.user.username }}</h3>
                           <p class="text-sm text-gray-800">{{ publication.bodyPublication }}</p>
                           <div class="mt-2 flex">
                             <span class="inline-flex items-center text-sm">
