--- a/artist4all_angular/src/app/components/secure/publications/edit-publication/edit-publication.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/edit-publication/edit-publication.component.html
@@ -1,74 +1,126 @@
 <app-user-navbar></app-user-navbar>
+<div class="lg: max-w-full grid lg:grid-cols-12 lg:gap-8 sm:grid-cols-2 bg-gray-100"
+  style="padding-left: 0; min-height: 1000px;">
+  <div class="hidden lg:block lg:col-span-2 bg-gray-800 min-h-screen">
+    <nav aria-label="Sidebar" class="sticky top-4 divide-y divide-gray-300" style="padding:25px;">
+      <div class="pb-8 space-y-1">
+        <a routerLink="/home"
+          class="bg-gray-900 text-gray-100 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md"
+          aria-current="page">
+          <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+          </svg>
+          <span class="truncate">
+            <a routerLink="/home" class="hover:text-gray-200">Home</a>
+          </span>
+        </a>
 
-<div class="hidden bg-gray-800 lg:block lg:w-72 min-h-screen">
-  <nav aria-label="Sidebar" class="sticky top-4 divide-y divide-gray-300" style="padding:25px;">
-    <div class="pb-8 space-y-1">
-      <a routerLink="/home"
-        class="text-gray-100 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md"
-        aria-current="page">
-        <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
-          viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-        </svg>
-        <span class="truncate">
-          <a routerLink="/home" class="hover:text-gray-200">Home</a>
-        </span>
-      </a>
+        <a routerLink="/store"
+          class="text-gray-200 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
+          <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" fill="none" stroke="currentColor"
+            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z">
+            </path>
+          </svg>
+          <span class="truncate">
+            <a routerLink="/store" class="hover:text-gray-200">Tienda</a>
+          </span>
+        </a>
 
-      <a routerLink="/store"
-        class="text-gray-100 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
-        <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" fill="none" stroke="currentColor"
-          viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z">
-          </path>
-        </svg>
-        <span class="truncate">
-          <a routerLink="/store" class="hover:text-gray-200">Tienda</a>
-        </span>
-      </a>
-
-      <a routerLink="/messages"
-        class="text-gray-100 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
-        <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" fill="none" stroke="currentColor"
-          viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4">
-          </path>
-        </svg>
-        <span class="truncate">
-          <a routerLink="/messages" class="hover:text-gray-200">Mensajería</a>
-        </span>
-      </a>
-    </div>
-  </nav>
-</div>
-
-<form #formPublication="ngForm" enctype="multipart/form-data" method="post" (ngSubmit)="editPublication(); formPublication.reset()">
-  <div *ngIf="!showingBodyHint"><span class="text-sm inline-block">Cantidad de carácteres permitidos: {{ contador }}</span></div>
-  <div *ngIf="showingBodyHint"><span class="text-sm inline-block">Cantidad de carácteres permitidos:</span><span class="inline-block text-sm text-red-600">&nbsp; {{ contador }}</span></div>
-  <textarea #textAreaBody="ngModel" (keyup)="countCharacters($event)" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication" cols="100"
-    rows="8"></textarea> <br>
-  <label for="imgOptional">Imagen(opcional): </label>
-  <input type="file" #imgPublication (change)="addImgPublication($event.target.files)" id="imgPublication" name="imgPublication[]" multiple="multiple"/>
-  <button type="button" (click)="removeSelectedImgs()">Desseleccionar las imagenes</button>
-  <br>
-
-  <img *ngFor='let url of images' class="inline-block" [src]="url" height="150" width="200px" style="margin: 5px;"> <br/>
-  <div *ngIf="imgToUpload == null">
-      <img *ngFor='let img of imgsReceived' src="http://localhost:81/assets/img/{{ img }}" class="inline-block" height="150" width="200px" style="margin: 5px;">
+        <a routerLink="/user/{{ id }}/messages"
+          class="text-gray-200 hover:bg-gray-700 hover:text-gray-200 group flex items-center px-3 py-2 text-sm font-medium rounded-md">
+          <svg class="text-gray-200 flex-shrink-0 -ml-1 mr-3 h-6 w-6" fill="none" stroke="currentColor"
+            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4">
+            </path>
+          </svg>
+          <span class="truncate">
+            <a routerLink="/user/{{ id }}/messages" class="hover:text-gray-200">Mensajería</a>
+          </span>
+        </a>
+      </div>
+    </nav>
   </div>
+  <div class="lg:col-span-2"></div>
+  <div class="container mt-5 mb-5 lg:col-span-6">
+    <!-- PUBLICATION -->
 
-  <button type="button" (click)="redirectBack()"> Cancelar </button>
-  <input type="submit" [disabled]="bodyPublication == '' || showingImgHint || showingBodyHint" value="Guardar los cambios"/>
-</form>
+    <mat-card *ngIf="miPublication != null" style="max-width: 980px;">
+      <mat-card-header>
+        <img mat-card-avatar class="example-header-image mt-2"
+          src="http://localhost:81/assets/img/{{ miPublication.user.imgAvatar }}" />
+        <mat-card-title>{{ miPublication.user.username }}</mat-card-title>
+        <mat-card-subtitle *ngIf="miPublication.isEdited == 0">{{ miPublication.upload_date }}</mat-card-subtitle>
+        <mat-card-subtitle *ngIf="miPublication.isEdited == 1">{{ miPublication.upload_date }} (editada)
+        </mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <div class="container mt-5 mb-5 lg:col-span-6"></div>
+        <form #formPublication="ngForm" enctype="multipart/form-data" method="post"
+          (ngSubmit)="editPublication(); formPublication.reset()" style="margin-top: -40px;">
+          <div *ngIf="!showingBodyHint"><span class="text-sm inline-block mb-2">Carácteres disponibles: {{
+              contador
+              }}</span></div>
+          <div *ngIf="showingBodyHint"><span class="text-sm inline-block mb-2">Carácteres disponibles:</span><span
+              class="inline-block text-sm text-red-600">&nbsp; {{ contador }}</span></div>
+          <textarea #textAreaBody="ngModel"
+            class="w-full shadow-inner p-4 border-0 rounded-lg focus:shadow-outline text-base"
+            (keyup)="countCharacters($event)" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication"
+            cols="100" rows="4"></textarea>
+            <label for="imgPublication">
+              <svg class="-mt-14 w-7 h-7 relative cursor-pointer text-gray-800" style="margin-left:80%; margin-top: -186%;" fill="none"
+                stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z">
+                </path>
+              </svg>
+            </label>
+            <button type="button" (click)="removeSelectedImgs()" class="absolute" style="margin-left:5%; margin-top: -5%;">
+              <svg class="w-7 h-7 font-bold text-red-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+            </button>
+            <!-- TODO: button desselect images, fix display of images and error message according-->
+            <input class="hidden" type="file" #imgPublication (change)="addImgPublication($event.target.files)"
+              id="imgPublication" name="imgPublication[]" ng-model="files" multiple="multiple" />
+          <br>
 
-<div *ngIf="showingImgHint" class="font-normal bg-red-100 text-red-900 p-2 rounded-md text-sm">
-  <i class="fas fa-times-circle"></i>
-  Formato no válido (Permitidos: png, jpeg, jpg, gif).
-</div>
-<div *ngIf="showingBodyHint" class="font-normal bg-red-100 text-red-900 p-2 rounded-md text-sm">
-  <i class="fas fa-times-circle"></i>
-  La cantidad máxima de carácteres es de 255.
-</div>
+          <img *ngFor='let url of images' class="inline-block" [src]="url" height="150" width="200px"
+            style="margin: 5px;"> <br />
+          <div *ngIf="imgToUpload == null">
+            <img *ngFor='let img of imgsReceived' src="http://localhost:81/assets/img/{{ img }}" class="inline-block mb-6"
+              height="150" width="200px" style="margin: 5px;">
+          </div>
+
+          <button type="button" class="py-2 mt-6 px-4 btn btn-sm ml-1 shadow-md mr-1 hover:bg-red-600 hover:text-white hover:border-transparent" (click)="redirectBack()"> Cancelar </button>
+          <input class="py-2 mt-6 px-4 btn btn-primary btn-sm shadow-none bg-indigo-500 hover:bg-indigo-600 hover:text-white" type="submit" [disabled]="bodyPublication == '' || showingImgHint || showingBodyHint"
+            value="Guardar los cambios" />
+        </form>
+      </mat-card-content>
+      <div id="carousel{{miPublication.id}}" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item" *ngFor="let img of miPublication.imgsPublication; index as i;"
+            [ngClass]="{'active': i == 0 }">￼
+            <div *ngIf="miPublication.imgsPublication != null">
+              <img src="http://localhost:81/assets/img/{{ img.imgPublication }}"
+                class="h-96 w-full mb-3 object-contain">
+            </div>
+            <div *ngIf="miPublication.imgsPublication.length > 1">
+              <a class="carousel-control-prev" href="#carousel{{miPublication.id}}" role="button" data-slide="prev">
+                <i class="fas fa-chevron-left" style="color: black; font-size:25px;"></i>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carousel{{miPublication.id}}" role="button" data-slide="next">
+                <i class="fas fa-chevron-right" style="color: black; font-size:25px;"></i>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </mat-card>
+    <div>
+    </div>
+  </div>
