Password pattern changed

--- a/artist4all_angular/src/app/components/public/register/register.component.html
+++ b/artist4all_angular/src/app/components/public/register/register.component.html
@@ -216,7 +216,8 @@
                   Requisitos: <br>
                   - Longitud mínima de 8 carácteres. <br>
                   - Longitud máxima de 20 carácteres. <br>
-                  - Debe tener 1 número, 1 mayúscula y 1 minúscula.
+                  - Sin espacios <br>
+                  - Debe tener 1 número, 1 mayúscula, 1 minúscula y 1 carácter especial.
                 </div>
               </div>
             </div>
