--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -225,7 +225,7 @@
             <div class="bg-white rounded-lg shadow">
               <div class="p-6">
                 <h2 id="trending-heading" class="text-base font-medium text-gray-900">
-                  Publicaciones destacadas
+                  Publicaciones destacadas del mes
                 </h2>
                 <div class="mt-6 flow-root">
                   <ul class="-my-4 divide-y divide-gray-200">
