desselect images button styles modified

--- a/artist4all_angular/src/app/components/secure/publications/edit-publication/edit-publication.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/edit-publication/edit-publication.component.html
@@ -72,19 +72,18 @@
             (keyup)="countCharacters($event)" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication"
             cols="100" rows="4"></textarea>
             <label for="imgPublication">
-              <svg class="-mt-14 w-7 h-7 relative cursor-pointer text-gray-800" style="margin-left:80%; margin-top: -186%;" fill="none"
+              <svg class="-mt-14 w-7 h-7 relative cursor-pointer text-gray-800 ml-4 mb-3" fill="none"
                 stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z">
                 </path>
               </svg>
+              <button type="button" (click)="removeSelectedImgs()">
+                <svg class="w-7 h-7 font-bold text-red-600 ml-14 relative" style="margin-top: -70%" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+              </button>
             </label>
-            <button type="button" (click)="removeSelectedImgs()" class="absolute" style="margin-left:5%; margin-top: -5%;">
-              <svg class="w-7 h-7 font-bold text-red-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
-            </button>
-            <!-- TODO: button desselect images, fix display of images and error message according-->
             <input class="hidden" type="file" #imgPublication (change)="addImgPublication($event.target.files)"
-              id="imgPublication" name="imgPublication[]" ng-model="files" multiple="multiple" />
+              id="imgPublication" name="imgPublication[]" ng-model="files" multiple="multiple"/>
           <br>
 
           <img *ngFor='let url of images' class="inline-block" [src]="url" height="150" width="200px"
