--- a/artist4all_angular/src/app/components/public/landing/landing.component.html
+++ b/artist4all_angular/src/app/components/public/landing/landing.component.html
@@ -31,7 +31,7 @@
       </div>
     </div>
   </div>
-  <div class="relative bg-gray-50 pt-16 pb-20 px-4 sm:px-6 lg:pt-18 lg:pb-28 lg:px-8">
+ <!--<div class="relative bg-gray-50 pt-16 pb-20 px-4 sm:px-6 lg:pt-18 lg:pb-28 lg:px-8">
     <div class="absolute inset-0">
     </div>
     <div class="relative max-w-7xl mx-auto">
@@ -207,5 +207,6 @@
       </div>
     </div>
   </div>
+-->
 </main>
 <app-footer></app-footer>
