--- a/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
@@ -175,7 +175,7 @@
           </div>
 
           <div *ngIf="isPrivate == 1 && status_follow != 3 && !isMyProfile" class="text-center mt-8 text-base">
-            <i class="fas fa-user-lock fa-3x mb-2"></i> <br>
+            <svg class="w-7 h-7 mx-auto" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path></svg> <br>
             Esta cuenta es privada, empieza a seguirla para poder ver sus publicaciones
           </div>
 
