Feedback message edit puiblication validation

--- a/artist4all_angular/src/app/components/secure/publications/edit-publication/edit-publication.component.html
+++ b/artist4all_angular/src/app/components/secure/publications/edit-publication/edit-publication.component.html
@@ -71,32 +71,47 @@
             class="w-full shadow-inner p-4 border-0 rounded-lg focus:shadow-outline text-base"
             (keyup)="countCharacters($event)" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication"
             cols="100" rows="4"></textarea>
-            <label for="imgPublication">
-              <svg class="-mt-14 w-7 h-7 relative cursor-pointer text-gray-800 ml-4 mb-3" fill="none"
+          <label for="imgPublication">
+            <svg class="-mt-14 w-7 h-7 relative cursor-pointer text-gray-800 ml-4 mb-3" fill="none"
+              stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z">
+              </path>
+            </svg>
+            <button type="button" (click)="removeSelectedImgs()">
+              <svg class="w-7 h-7 font-bold text-red-600 ml-14 relative" style="margin-top: -70%" fill="none"
                 stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z">
-                </path>
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
               </svg>
-              <button type="button" (click)="removeSelectedImgs()">
-                <svg class="w-7 h-7 font-bold text-red-600 ml-14 relative" style="margin-top: -70%" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
-              </button>
-            </label>
-            <input class="hidden" type="file" #imgPublication (change)="addImgPublication($event.target.files)"
-              id="imgPublication" name="imgPublication[]" ng-model="files" multiple="multiple"/>
+            </button>
+          </label>
+          <input class="hidden" type="file" #imgPublication (change)="addImgPublication($event.target.files)"
+            id="imgPublication" name="imgPublication[]" ng-model="files" multiple="multiple" />
           <br>
 
           <img *ngFor='let url of images' class="inline-block" [src]="url" height="150" width="200px"
             style="margin: 5px;"> <br />
           <div *ngIf="imgToUpload == null">
-            <img *ngFor='let img of imgsReceived' src="http://localhost:81/assets/img/{{ img }}" class="inline-block mb-6"
-              height="150" width="200px" style="margin: 5px;">
+            <img *ngFor='let img of imgsReceived' src="http://localhost:81/assets/img/{{ img }}"
+              class="inline-block mb-6" height="150" width="200px" style="margin: 5px;">
           </div>
 
-          <button type="button" class="py-2 mt-6 px-4 btn btn-sm ml-1 shadow-md mr-1 hover:bg-red-600 hover:text-white hover:border-transparent" (click)="redirectBack()"> Cancelar </button>
-          <input class="py-2 mt-6 px-4 btn btn-primary btn-sm shadow-none bg-indigo-500 hover:bg-indigo-600 hover:text-white" type="submit" [disabled]="bodyPublication == '' || showingImgHint || showingBodyHint"
+          <button type="button"
+            class="py-2 mt-6 px-4 btn btn-sm ml-1 shadow-md mr-1 hover:bg-red-600 hover:text-white hover:border-transparent"
+            (click)="redirectBack()"> Cancelar </button>
+          <input
+            class="py-2 mt-6 px-4 btn btn-primary btn-sm shadow-none bg-indigo-500 hover:bg-indigo-600 hover:text-white"
+            type="submit" [disabled]="bodyPublication == '' || showingImgHint || showingBodyHint"
             value="Guardar los cambios" />
         </form>
+        <div *ngIf="showingImgHint" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-8 mb-2 text-sm">
+          <i class="fas fa-times-circle"></i>
+          Formato no válido (Permitidos: png, jpeg, jpg, gif).
+        </div>
+        <div *ngIf="showingBodyHint" class="font-normal bg-red-100 text-red-900 p-2 rounded-md mt-8 mb-2 text-sm">
+          <i class="fas fa-times-circle"></i>
+          La cantidad máxima de carácteres es de 255.
+        </div>
       </mat-card-content>
     </mat-card>
     <div>
