--- a/artist4all_angular/src/app/components/public/landing/landing.component.html
+++ b/artist4all_angular/src/app/components/public/landing/landing.component.html
@@ -10,7 +10,7 @@
               alt="People working on laptops">
             <div class="absolute inset-0 bg-gray-400" style="mix-blend-mode: multiply;"></div>
           </div>
-          <div class="relative px-4 py-16 sm:px-6 sm:py-24 lg:py-80 lg:px-8">
+          <div class="relative px-4 py-16 sm:px-6 sm:py-24 lg:py-80 lg:px-8" style="min-height: 600px;">
             <h1 class="text-center text-4xl font-extrabold tracking-tight sm:text-5xl lg:text-6xl">
               <span class="block text-white">Artist4All</span>
             </h1>
@@ -31,182 +31,5 @@
       </div>
     </div>
   </div>
- <!--<div class="relative bg-gray-50 pt-16 pb-20 px-4 sm:px-6 lg:pt-18 lg:pb-28 lg:px-8">
-    <div class="absolute inset-0">
-    </div>
-    <div class="relative max-w-7xl mx-auto">
-      <div class="text-center">
-        <h2 class="text-3xl tracking-tight font-extrabold text-gray-900 sm:text-4xl">
-          Destacado
-        </h2>
-        <p class="mt-3 max-w-2xl mx-auto text-xl md:mb-8 mb-4 text-gray-500 sm:mt-4">
-          Las publicaciones y artistas destacados de esta semana.
-        </p>
-      </div>
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
-              <div class="flex-shrink-0">
-                <img class="h-96 w-full object-cover"
-                  src="https://images.unsplash.com/photo-1496128858413-b36217c2ce36?ixlib=rb-1.2.1&ixqx=NyaX3ZCB6U&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1679&q=80"
-                  alt="">
-              </div>
-              <div class="flex-1 bg-white p-6 flex flex-col justify-between">
-                <div class="flex-1">
-                  <p class="text-sm font-medium text-indigo-600">
-                    <a href="#" class="hover:underline">
-                      Post
-                    </a>
-                  </p>
-                  <a href="#" class="block mt-2">
-                    <p class="text-xl font-semibold text-gray-900">
-                      Boost your conversion rate
-                    </p>
-                    <p class="mt-3 text-base text-gray-500">
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid culpa corporis eveniet adipisci
-                      hic quam consequuntur temporibus perspiciatis est repellendus, alias nisi nostrum? Earum aliquam
-                      recusandae quae, quibusdam odio soluta reiciendis aut doloribus dolorum ad vel explicabo quas ex
-                      assumenda animi officiis porro molestias adipisci qui quasi repellendus vero non.
-                    </p>
-                  </a>
-                </div>
-                <div class="mt-6 flex items-center">
-                  <div class="flex-shrink-0">
-                    <a href="#">
-                      <span class="sr-only">Roel Aufderehar</span>
-                      <img class="h-10 w-10 rounded-full"
-                        src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixqx=NyaX3ZCB6U&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                        alt="">
-                    </a>
-                  </div>
-                  <div class="ml-3">
-                    <p class="text-sm font-medium text-gray-900">
-                      <a href="#" class="hover:underline">
-                        Roel Aufderehar
-                      </a>
-                    </p>
-                    <div class="flex space-x-1 text-sm text-gray-500">
-                      <time datetime="2020-03-16">
-                        Mar 16, 2020
-                      </time>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
-              <div class="flex-shrink-0">
-                <img class="h-96 w-full object-cover"
-                  src="https://images.unsplash.com/photo-1547586696-ea22b4d4235d?ixlib=rb-1.2.1&ixqx=NyaX3ZCB6U&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1679&q=80"
-                  alt="">
-              </div>
-              <div class="flex-1 bg-white p-6 flex flex-col justify-between">
-                <div class="flex-1">
-                  <p class="text-sm font-medium text-indigo-600">
-                    <a href="#" class="hover:underline">
-                      Producto</a>
-                  </p>
-                  <a href="#" class="block mt-2">
-                    <p class="text-xl font-semibold text-gray-900">
-                      How to use search engine optimization to drive sales
-                    </p>
-                    <p class="mt-3 text-base text-gray-500">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit facilis asperiores porro quaerat
-                      doloribus, eveniet dolore. Adipisci tempora aut inventore optio animi., tempore temporibus quo
-                      laudantium.
-                    </p>
-                  </a>
-                </div>
-                <div class="mt-6 flex items-center">
-                  <div class="flex-shrink-0">
-                    <a href="#">
-                      <span class="sr-only">Brenna Goyette</span>
-                      <img class="h-10 w-10 rounded-full"
-                        src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&ixqx=NyaX3ZCB6U&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                        alt="">
-                    </a>
-                  </div>
-                  <div class="ml-3">
-                    <p class="text-sm font-medium text-gray-900">
-                      <a href="#" class="hover:underline">
-                        Brenna Goyette
-                      </a>
-                    </p>
-                    <div class="flex space-x-1 text-sm text-gray-500">
-                      <time datetime="2020-03-10">
-                        Mar 10, 2020
-                      </time>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
-              <div class="flex-shrink-0">
-                <img class="h-96 w-full object-cover"
-                  src="https://images.unsplash.com/photo-1492724441997-5dc865305da7?ixlib=rb-1.2.1&ixqx=NyaX3ZCB6U&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1679&q=80"
-                  alt="">
-              </div>
-              <div class="flex-1 bg-white p-6 flex flex-col justify-between">
-                <div class="flex-1">
-                  <p class="text-sm font-medium text-indigo-600">
-                    <a href="#" class="hover:underline">
-                      Artista
-                    </a>
-                  </p>
-                  <a href="#" class="block mt-2">
-                    <p class="text-xl font-semibold text-gray-900">
-                      Improve your customer experience
-                    </p>
-                    <p class="mt-3 text-base text-gray-500">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint harum rerum voluptatem quo
-                      recusandae
-                      magni placeat saepe molestiae, sed excepturi cumque corporis perferendis hic.
-                    </p>
-                  </a>
-                </div>
-                <div class="mt-6 flex items-center">
-                  <div class="flex-shrink-0">
-                    <a href="#">
-                      <span class="sr-only">Daniela Metz</span>
-                      <img class="h-10 w-10 rounded-full"
-                        src="https://images.unsplash.com/photo-1487412720507-e7ab37603c6f?ixlib=rb-1.2.1&ixqx=NyaX3ZCB6U&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                        alt="">
-                    </a>
-                  </div>
-                  <div class="ml-3">
-                    <p class="text-sm font-medium text-gray-900">
-                      <a href="#" class="hover:underline">
-                        Daniela Metz
-                      </a>
-                    </p>
-                    <div class="flex space-x-1 text-sm text-gray-500">
-                      <time datetime="2020-02-12">
-                        Feb 12, 2020
-                      </time>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </div>
-  </div>
--->
 </main>
 <app-footer></app-footer>
