--- a/artist4all_angular/src/app/components/secure/settings/user-settings-profile/user-settings-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/settings/user-settings-profile/user-settings-profile.component.html
@@ -248,7 +248,7 @@
                 Volver a la home</button>
              <!-- TODO: button styles when disable to distinguish when u can send form -->
              <input type="submit" [disabled]="formProfile.invalid || username == '' || name == '' || surname1 == '' || surname2 == '' || email == '' || showingImgHint || existingUser"
-             class="ml-5 bg-blue-500 border border-transparent rounded-md shadow-sm py-2 px-4 inline-flex justify-center text-sm font-medium text-white hover:bg-light-blue-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500"
+             class="ml-5 mb-6 bg-blue-500 border border-transparent rounded-md shadow-sm py-2 px-4 inline-flex justify-center text-sm font-medium text-white hover:bg-light-blue-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500"
              value="Guardar los cambios"/>
             </div>
           </div>
