--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -106,7 +106,7 @@
                   <i class="fas fa-times-circle text-red-700 ml-1 hover:text-red-500"></i>Rechazar</button>
                 <button *ngIf="notification.typeNotification != 2" class="focus:outline-none mr-3"
                 (click)="notificationRead(notification.id, i)">
-                  <i class="fas fa-check-double mr-1 hover:text-gray-500"></i>Leído</button>
+                  <i class="fas fa-check-double mr-1 text-green-600 hover:text-gray-500"></i>Leído</button>
                 <button *ngIf="notification.typeNotification != 2" class="focus:outline-none"
                   (click)="removeNotification(notification.id, i)">
                   <i class="fas fa-trash-alt text-red-700 ml-1 hover:text-red-500"></i>Borrar</button>
